--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,10 +11,10 @@
     {% endblock %}
 </head>
 <body>
-<div class="container mx-auto">
+<div class="container">
+
 {{ include ('header/header.html.twig') }}
 
-{% block content %}base{% endblock %}
 
 {{ include ('footer/footer.html.twig') }}
 </div>
